--- a/src/LanguageSpecs.Web/LanguageSpecs.Web.csproj
+++ b/src/LanguageSpecs.Web/LanguageSpecs.Web.csproj
@@ -12,6 +12,7 @@
     <Content Remove="wwwroot/images\fsharp128.png" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.NETCore.App" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.1" />
