--- a/src/LanguageSpecs.Web/appsettings.json
+++ b/src/LanguageSpecs.Web/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ApplicationInsights": {
+    "InstrumentationKey": "15dd61e0-4d75-4bcc-9856-9310434d4e99"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
